--- a/main.css
+++ b/main.css
@@ -140,3 +140,100 @@ h1 {
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
+
+.modal-container {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: grid;
+    place-items: center;
+    backdrop-filter: blur(10px);
+    /* Opacity: 0; */
+    pointer-events: none;
+    z-index: 4;
+    transition: all 0.3s ease-in-out;
+}
+
+.modal-container.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.modal {
+    border: 3px solid var(--secondary);
+    padding: var(--med);
+    background-color: var(--primary);
+    box-shadow: 1px 4px 30px 10px var(--shadow);
+    transform: translateY(30%);
+    transition: all 0.3s ease-in;
+}
+
+.modal-container.active .modal {
+    transform: translateY(0);
+}
+
+.modal h2 {
+    text-align: center;
+    margin-bottom: var(--base);
+}
+
+#title {
+    font-size: inherit;
+    font-family: inherit;
+    color: inherit;
+    background-color: var(--light);
+    padding: 0.5rem;
+}
+
+#title:focus {
+    outline: 2px solid var(--secondary);
+}
+
+.icons {  /* refers to the container 'icons' */
+    display: grid;
+    place-items: center;
+    padding: var(--sm) 0;
+    grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
+    grid-gap: 1rem;
+}
+
+.icon { /* refers to the children (the individual icons) in the container */
+    width: var(--med);
+    height: var(--med);
+    border-radius: 50%;
+    background-color: var(--primary);
+    color: var(--secondary);
+    border: 4px solid var(--secondary);
+    display: grid;
+    place-items: center;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.icon.selected {
+    background-color: var(--secondary);
+    color: var(--primary);
+}
+
+.modal-btns {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 0.5rem;
+}
+
+#add, #cancel {
+    font-size: inherit;
+    font-family: inherit;
+    color: inherit;
+    background-color: var(--light);
+    padding: 0.5rem;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+#add:hover, #cancel:hover {
+    color: var(--primary);
+    background-color: var(--secondary);
+}
