--- a/main.css
+++ b/main.css
@@ -150,7 +150,7 @@ h1 {
     display: grid;
     place-items: center;
     backdrop-filter: blur(10px);
-    /* Opacity: 0; */
+    Opacity: 0;
     pointer-events: none;
     z-index: 4;
     transition: all 0.3s ease-in-out;
