--- a/main.css
+++ b/main.css
@@ -237,3 +237,39 @@ h1 {
     color: var(--primary);
     background-color: var(--secondary);
 }
+
+.context-menu {
+    position: fixed;
+    z-index: 1000;
+    width: 200px;
+    background-color: var(--primary);
+    padding: var(--sm);
+    box-shadow: 1px 4px 30px 10px var(--shadow);
+    border: 3px solid var(--secondary);
+    display: none;
+}
+
+.context-menu.active {
+    display: grid;
+}
+
+#habitTitle::before {
+    content: 'Title: ';
+}
+
+#deleteHabit {
+    font-size: inherit;
+    font-family: inherit;
+    background-color: var(--primary);
+    border: 3px solid var(--secondary);
+    color: var(--danger);
+    padding: 0.5rem;
+    margin-top: 0.5rem;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+#deleteHabit:hover, #deleteHabit:focus {
+    background-color: var(--danger);
+    color: var(--primary);
+}
